--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -61,7 +61,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1 class="fhead">Meet new and interesting dogs nearby.</h1>
+            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-btn">
               <i class="fa-brands fa-apple"></i> Download
             </button>
@@ -90,17 +90,17 @@
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="fas fa-check-circle fa-4x icon"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feater-text">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="fas fa-bullseye fa-4x icon"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feater-text">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="fas fa-heart fa-4x icon"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feater-text">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
@@ -112,7 +112,7 @@
       <div id="testimonial-carousel" class="carousel slide" data-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2>
+            <h2 class="testimonial-text">
               I no longer have to sniff other dogs for love. I've found the
               hottest Corgi on TinDog. Woof.
             </h2>
@@ -171,7 +171,7 @@
     <!-- Pricing -->
 
     <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
@@ -181,7 +181,7 @@
               <h3>Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h2 class="price-text">Free</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -195,7 +195,7 @@
               <h3>Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="price-text">$49 / mo</h2>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
@@ -209,7 +209,7 @@
               <h3>Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="price-text">$99 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
